Fixed bug on mobile devices

--- a/assets/css/site/search.css
+++ b/assets/css/site/search.css
@@ -16,6 +16,7 @@
 }
 
 .search-result {
+    overflow-y: auto;
     max-height: 50vh;
     -webkit-overflow-scrolling: touch;
 }
